Added:Logging part added to all the controllers
